force-app/main/default/objects/pse__Resource_Skill_Request__c/pse__Resource_Skill_Request__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ResourceSkillRequestHelp</customHelpPage>
    <description>Represents the skills or certifications requested for a resource prior to staffing them on a project. A Skill or Certification can be marked as primary to identify the primary skill desired in the resource request.</description>
    <label>Resource Skill Request</label>
    <nameField>
        <displayFormat>SkillRequest{0000000}</displayFormat>
        <label>Resource Skill Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Skill Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>