force-app/main/default/objects/pse__Resource_Skill_Request__c/fields/pse__Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Request</label>
    <referenceTo>pse__Resource_Request__c</referenceTo>
    <relationshipLabel>Resource Skill Requests</relationshipLabel>
    <relationshipName>Resource_Skill_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>