force-app/main/default/objects/pse__Resource_Skill_Request__c/fields/pse__Skill_Certification__c.field-meta.xml
<CustomField>
    <fullName>pse__Skill_Certification__c</fullName>
    <label>Skill or Certification</label>
    <referenceTo>pse__Skill__c</referenceTo>
    <relationshipLabel>Resource Skill Requests</relationshipLabel>
    <relationshipName>Resource_Skill_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>