force-app/main/default/objects/pse__Resource_Skill_Request__c/fields/pse__Skill_or_Certification__c.field-meta.xml
<CustomField>
    <fullName>pse__Skill_or_Certification__c</fullName>
    <formula>IF(
		    ISPICKVAL(pse__Skill_Certification__r.pse__Skill_Or_Certification__c,&apos;Skill&apos;), &apos;Skill&apos;, 
		    IF(
		        ISPICKVAL(pse__Skill_Certification__r.pse__Skill_Or_Certification__c, &apos;Certification&apos;), &apos;Certification&apos;, 
		        &apos;Unknown&apos;
		    )
		)</formula>
    <label>Skill or Certification</label>
    <type>Text</type>
</CustomField>