force-app/main/default/objects/pse__Resource_Skill_Request__c/validationRules/pse__Rating_Required_For_Skill.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Rating_Required_For_Skill</fullName>
    <active>false</active>
    <errorConditionFormula>AND( pse__Skill_or_Certification__c = &apos;Skill&apos;, ISPICKVAL( pse__Minimum_Rating__c, &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>pse__Minimum_Rating__c</errorDisplayField>
    <errorMessage>Minimum rating is required for skill requests.</errorMessage>
</ValidationRule>